# llm-powered-log-analytic

./: .dockerignore  .env.example  .env.full.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  constraints.txt  docker-compose.quickstart.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini
apps/web/: README.md  next-env.d.ts  package.json  tsconfig.json
apps/workers/: README.md
docs/: api.md  architecture.md  data-model.md  demo-guide.md  glossary.md  install-test-windows-macos.md  life-of-a-log-line.md  logan_workers_pipeline_explorer.html  openapi.snapshot.json  operations.md  reliability-and-explainability.md  security.md  share-project.md
infra/docker/: api.Dockerfile  standalone-entrypoint.sh  standalone.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/eks/: logan-configmap.yaml
infra/k8s/: api-deployment.yaml  clickhouse.yaml  configmap.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  minio.yaml  namespace.yaml  network-policy.yaml  opensearch.yaml  postgres.yaml  redis.yaml  secrets.example.yaml  temporal.yaml  web-deployment.yaml  worker-deployment.yaml
scripts/: __init__.py  dev.bat  dev.ps1  evaluate_benchmarks.py  export_openapi.py  full_stack_smoke.py  generate_demo_logs.py  local.bat  local.ps1  run_migrations.py  seed_demo_case.py  shoot_demo_screens.js
tests/api/: test_aiplatform_model_gateway.py  test_analytics_queries.py  test_analytics_sinks.py  test_api.py  test_migration_cli.py  (+8 more)
(+142 files in other folders)
