[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "logan-platform"
version = "0.1.0"
description = "LLM-powered Log Analytics with Causal Inferencing platform foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "sqlalchemy>=2",
  "psycopg[binary]>=3",
  "bcrypt>=5",
  "cryptography>=42",
  "httpx>=0.27",
  "boto3>=1.34",
  "temporalio>=1.7"
]

[tool.setuptools.packages.find]
where = ["apps/api", "apps/workers"]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/workers"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
